fix: card container spacing

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,6 @@
 }
 
 .body-container{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   height: 100%;
 }
 
